--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+    .body {
+      background-color: green;
+      display:flex;
+    }
+  @media screen and (min-width: 480px) {
+    .body {
+      background-color: lightgreen;
+    }
+  </style>
 </head>
 <body>
   <div id="welcome-section">
